# beadie

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/beadie/: Cargo.toml
crates/beadie-backend/: Cargo.toml
crates/beadie-backend/src/: lib.rs  tiered.rs
crates/beadie-core/: Cargo.toml
crates/beadie-core/src/: bead.rs  broker.rs  chain.rs  deopt.rs  lib.rs  osr.rs  policy.rs  swap.rs
crates/beadie-cranelift/: Cargo.toml
crates/beadie-cranelift/examples/: fib.rs
crates/beadie-cranelift/src/: lib.rs
crates/beadie-llvm/: Cargo.toml
crates/beadie-llvm/src/: lib.rs
crates/beadie/src/: lib.rs
docs/: osr.md
