[package]
name            = "beadie-backend"
description     = "JitBackend trait, BackendAdapter, BoundBead, and TieredAdapter"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true

[dependencies]
beadie-core.workspace = true
crossbeam-channel.workspace = true
log.workspace = true
