[package]
name            = "beadie-core"
description     = "Bead chain, broker, hotness policy, swap, and deopt — no JIT backend"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true

[dependencies]
crossbeam-channel.workspace = true
log.workspace = true
