[package]
name            = "beadie-llvm"
description     = "LLVM JIT backend adapter for beadie (via inkwell)"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true

[features]
default  = ["llvm18-1"]
llvm18-1 = ["inkwell/llvm18-1"]
llvm19-1 = ["inkwell/llvm19-1"]
llvm20-1 = ["inkwell/llvm20-1"]
llvm21-1 = ["inkwell/llvm21-1"]

[dependencies]
beadie-core.workspace    = true
beadie-backend.workspace = true
inkwell = { version = "0.8", default-features = false }
