[package]
name            = "beadie"
description     = "Hot-function promotion broker for interpreter-to-JIT tiering"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true
readme          = "../../README.md"

[features]
default   = []
cranelift = ["dep:beadie-cranelift"]
llvm      = ["dep:beadie-llvm"]
llvm18-1  = ["llvm", "beadie-llvm/llvm18-1"]
llvm19-1  = ["llvm", "beadie-llvm/llvm19-1"]
llvm20-1  = ["llvm", "beadie-llvm/llvm20-1"]
llvm21-1  = ["llvm", "beadie-llvm/llvm21-1"]

[dependencies]
beadie-core.workspace    = true
beadie-backend.workspace = true
beadie-cranelift = { path = "../beadie-cranelift", version = "0.3.0", optional = true }
beadie-llvm      = { path = "../beadie-llvm",      version = "0.3.0", optional = true }
